--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>BOM Lookup</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; }
-    input, button { padding: 8px; margin: 5px 0; }
+    input, button { padding: 8px; margin: 5px 0; width: 300px; }
     #result { margin-top: 20px; text-align: left; }
     table { border-collapse: collapse; width: 100%; margin-top: 10px; }
     table, th, td { border: 1px solid #999; }
@@ -14,10 +14,11 @@
   </style>
 </head>
 <body>
-  <h2>Enter Product SKUs to Get BOM</h2>
-  <p>Separate multiple SKUs with commas (e.g., 12345,67890)</p>
+  <h2>BOM Lookup Form</h2>
+  <p>Enter one or more Product SKUs separated by commas (e.g., 12345,67890)</p>
+
   <form id="bomForm">
-    <input type="text" id="sku" name="sku" placeholder="Enter Product SKU(s)" required>
+    <input type="text" id="sku" name="sku" placeholder="Enter SKU(s)" required>
     <button type="submit">Submit</button>
   </form>
 
@@ -29,13 +30,14 @@
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
+
       const skuInput = document.getElementById('sku').value.trim();
       if (!skuInput) return;
 
-      // Split SKUs by comma, trim spaces
+      // Split SKUs by comma and clean up whitespace
       const skus = skuInput.split(',').map(s => s.trim()).filter(s => s.length);
 
-      resultDiv.innerHTML = "Loading...";
+      resultDiv.innerHTML = "<p>Loading...</p>";
 
       try {
         const response = await fetch('https://YOUR_N8N_DOMAIN/webhook/bom-lookup?secret=YOUR_SECRET_TOKEN', {
@@ -47,7 +49,29 @@
         if (!response.ok) throw new Error("Request failed");
 
         const data = await response.json();
-        resultDiv.innerHTML = data.result; // Already HTML formatted from n8n
+
+        if (!data.result || data.result.length === 0) {
+          resultDiv.innerHTML = "<p>No BOMs found for the entered SKUs.</p>";
+          return;
+        }
+
+        // If your n8n Code node returns text with line breaks, format it as a table
+        // Split BOMs by a separator (e.g., "-------------------------")
+        const bomItems = data.result.split('-------------------------').filter(s => s.trim().length);
+
+        let html = '';
+        bomItems.forEach(item => {
+          const lines = item.trim().split('\n');
+          html += '<table>';
+          lines.forEach(line => {
+            const [key, value] = line.split(':').map(s => s.trim());
+            html += `<tr><th>${key}</th><td>${value}</td></tr>`;
+          });
+          html += '</table><br>';
+        });
+
+        resultDiv.innerHTML = html;
+
       } catch (err) {
         resultDiv.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
       }
@@ -55,4 +79,3 @@
   </script>
 </body>
 </html>
-
